[package]
name = "backconnectsocks5"
version = "0.1.0"
description = "Shuffles your socks - rotating proxy frontend server"
authors = ["superdevel7 <git@rxv.cc>"]
license = "GPL-3.0"
repository = "https://github.com/superdevel7/backconnectsocks5"
categories = ["command-line-utilities"]
readme = "README.md"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.40"
arc-swap = "1.3.0"
bstr = "0.2.16"
bytes = "1.4.0"
chrono = "0.4.23"
dotenv = "0.15.0"
env_logger = "0.9"
lazy_static = "1.4.0"
log = "0.4.14"
mysql = "23.0.1"
parking_lot = "0.12.1"
rand = "0.8.3"
serde = { version="1.0.152", features = ["derive"] }
serde_json = "1.0.93"
structopt = "0.3.21"
tokio = { version = "1.6.1", features = ["macros", "rt-multi-thread", "signal", "net", "io-util", "fs"] }
tokio-util = "0.7.7"
warp = { version = "0.3.3", features = [], default-features = false }
